initial work on the RavenDb subscription storage work

--- a/ripple.config
+++ b/ripple.config
@@ -28,17 +28,28 @@
     <Dependency Name="FubuMVC.Media" Version="0.9.5.430" Mode="Float" />
     <Dependency Name="FubuMVC.Navigation" Version="0.9.1.205" Mode="Float" />
     <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.RavenDb" Version="0.9.5.87" Mode="Float" />
     <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.647" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.576" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1672" Mode="Float" />
     <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.642" Mode="Float" />
+    <Dependency Name="FubuPersistence" Version="0.9.5.87" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.0.0.179" Mode="Float" />
     <Dependency Name="LightningQueues" Version="0.1.0.47" Mode="Float" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
+    <Dependency Name="Microsoft.CompilerServices.AsyncTargetingPack" Version="1.0.1.0" Mode="Fixed" />
+    <Dependency Name="Microsoft.Data.Edm" Version="5.6.0.0" Mode="Fixed" />
+    <Dependency Name="Microsoft.Data.OData" Version="5.6.0.0" Mode="Fixed" />
+    <Dependency Name="Microsoft.Data.Services.Client" Version="5.6.0" Mode="Fixed" />
+    <Dependency Name="Microsoft.WindowsAzure.ConfigurationManager" Version="2.0.3" Mode="Fixed" />
+    <Dependency Name="Newtonsoft.Json" Version="5.0.8.0" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
+    <Dependency Name="RavenDB.Client" Version="2.5.2666.0" Mode="Fixed" />
+    <Dependency Name="RavenDB.Database" Version="2.5.2666.0" Mode="Fixed" />
+    <Dependency Name="RavenDB.Embedded" Version="2.5.2666.0" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="Selenium.RC" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.Support" Version="2.35.0.0" Mode="Fixed" />
@@ -49,7 +60,9 @@
     <Dependency Name="Storyteller2" Version="2.0.0.40" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="System.Spatial" Version="5.6.0.0" Mode="Fixed" />
     <Dependency Name="TopShelf" Version="3.1.2.0" Mode="Fixed" />
+    <Dependency Name="WindowsAzure.Storage" Version="3.0.1.0" Mode="Fixed" />
   </Nugets>
   <Groups />
   <References>
