--- a/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
+++ b/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -80,11 +80,11 @@
     <Compile Include="LightningQueuesChannel.cs" />
     <Compile Include="LightningQueueSettings.cs" />
     <Compile Include="LightningQueuesExtension.cs" />
+    <Compile Include="LightningQueuesReplyChannel.cs" />
     <Compile Include="LightningQueuesTransport.cs" />
     <Compile Include="LightningUri.cs" />
     <Compile Include="PersistentQueues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="LightningQueuesReplyChannel.cs" />
     <Compile Include="TransactionCallback.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -94,8 +94,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Diagnostics\QueueMessagesVisualization.spark" />
     <None Include="Diagnostics\QueueManagersVisualization.spark" />
+    <None Include="Diagnostics\QueueMessagesVisualization.spark" />
     <EmbeddedResource Include="pak-WebContent.zip" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
