--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -235,10 +235,6 @@
     <Compile Include="Runtime\Invocation\SimpleEnvelopeHandler.cs" />
     <Compile Include="Runtime\Invocation\SimpleHandlerInvoker.cs" />
     <Compile Include="Runtime\IReceiver.cs" />
-    <Compile Include="Subscriptions\GroupSubscriptionRequirement.cs" />
-    <Compile Include="Subscriptions\InMemorySubscriptionPersistence.cs" />
-    <Compile Include="Subscriptions\InvalidOrMissingTransportException.cs" />
-    <Compile Include="Subscriptions\ISubscriptionCache.cs" />
     <Compile Include="Runtime\ITransport.cs" />
     <Compile Include="Runtime\Receiver.cs" />
     <Compile Include="Runtime\ReplyListener.cs" />
@@ -252,14 +248,6 @@
     <Compile Include="Runtime\Serializers\EnvelopeSerializer.cs" />
     <Compile Include="Runtime\Serializers\IMessageSerializer.cs" />
     <Compile Include="Runtime\Serializers\XmlMessageSerializer.cs" />
-    <Compile Include="Subscriptions\ISubscriptionPersistence.cs" />
-    <Compile Include="Subscriptions\ISubscriptionRepository.cs" />
-    <Compile Include="Subscriptions\ISubscriptionRequirement.cs" />
-    <Compile Include="Subscriptions\LocalSubscriptionRequirement.cs" />
-    <Compile Include="Subscriptions\Subscription.cs" />
-    <Compile Include="Subscriptions\SubscriptionActivator.cs" />
-    <Compile Include="Subscriptions\SubscriptionRequested.cs" />
-    <Compile Include="Subscriptions\SubscriptionCache.cs" />
     <Compile Include="Runtime\TransportActivator.cs" />
     <Compile Include="Runtime\TransportBase.cs" />
     <Compile Include="Runtime\UnknownChannelException.cs" />
@@ -276,7 +264,19 @@
     <Compile Include="Scheduling\ThreadScheduler.cs" />
     <Compile Include="ServiceBus.cs" />
     <Compile Include="StringExtensions.cs" />
+    <Compile Include="Subscriptions\GroupSubscriptionRequirement.cs" />
+    <Compile Include="Subscriptions\InMemorySubscriptionPersistence.cs" />
+    <Compile Include="Subscriptions\InvalidOrMissingTransportException.cs" />
+    <Compile Include="Subscriptions\ISubscriptionCache.cs" />
+    <Compile Include="Subscriptions\ISubscriptionPersistence.cs" />
+    <Compile Include="Subscriptions\ISubscriptionRepository.cs" />
+    <Compile Include="Subscriptions\ISubscriptionRequirement.cs" />
+    <Compile Include="Subscriptions\LocalSubscriptionRequirement.cs" />
+    <Compile Include="Subscriptions\Subscription.cs" />
+    <Compile Include="Subscriptions\SubscriptionActivator.cs" />
+    <Compile Include="Subscriptions\SubscriptionCache.cs" />
     <Compile Include="Subscriptions\SubscriptionRepository.cs" />
+    <Compile Include="Subscriptions\SubscriptionRequested.cs" />
     <Compile Include="Subscriptions\SubscriptionRequirements.cs" />
     <Compile Include="Subscriptions\SubscriptionsChanged.cs" />
     <Compile Include="Subscriptions\SubscriptionsHandler.cs" />
