fixed the blasted RavenDb dependency problems, RavenDb nuspec, first end to end ST test for subscriptions

--- a/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
@@ -2,9 +2,9 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
-FubuMVC.RavenDb
+FubuMVC.RavenDb45
 FubuMVC.StructureMap
-FubuPersistence
+FubuPersistence45
 FubuTestingSupport
 HtmlTags
 Microsoft.CompilerServices.AsyncTargetingPack
