--- a/src/FubuTransportation.RavenDb/ripple.dependencies.config
+++ b/src/FubuTransportation.RavenDb/ripple.dependencies.config
@@ -2,8 +2,8 @@ Bottles
 FubuCore
 FubuLocalization
 FubuMVC.Core
-FubuMVC.RavenDb
-FubuPersistence
+FubuMVC.RavenDb45
+FubuPersistence45
 HtmlTags
 Microsoft.CompilerServices.AsyncTargetingPack
 Microsoft.Data.Edm
