--- a/ripple.config
+++ b/ripple.config
@@ -13,29 +13,29 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.0.0.568" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.0.0.576" Mode="Float" />
     <Dependency Name="BottleServiceRunner" Version="2.0.0.558" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.2" Mode="Float" />
-    <Dependency Name="FubuLocalization" Version="1.0.0.172" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="1.2.0.1678" Mode="Float" />
     <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.557" Mode="Float" />
     <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.606" Mode="Float" />
     <Dependency Name="FubuMVC.Core.View" Version="1.0.0.576" Mode="Float" />
     <Dependency Name="FubuMVC.Diagnostics" Version="0.9.8.355" Mode="Float" />
     <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.233" Mode="Float" />
     <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.339" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1672" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1676" Mode="Float" />
     <Dependency Name="FubuMVC.Media" Version="0.9.5.430" Mode="Float" />
     <Dependency Name="FubuMVC.Navigation" Version="0.9.1.205" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1672" Mode="Float" />
-    <Dependency Name="FubuMVC.RavenDb" Version="0.9.5.87" Mode="Float" />
+    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1676" Mode="Float" />
+    <Dependency Name="FubuMVC.RavenDb45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.647" Mode="Float" />
     <Dependency Name="FubuMVC.Spark" Version="1.0.0.576" Mode="Float" />
     <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1672" Mode="Float" />
     <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.642" Mode="Float" />
-    <Dependency Name="FubuPersistence" Version="0.9.5.87" Mode="Float" />
+    <Dependency Name="FubuPersistence45" Version="0.9.5.95" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.179" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
     <Dependency Name="LightningQueues" Version="0.1.0.47" Mode="Float" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="Microsoft.CompilerServices.AsyncTargetingPack" Version="1.0.1.0" Mode="Fixed" />
@@ -47,17 +47,17 @@
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
-    <Dependency Name="RavenDB.Client" Version="2.5.2666.0" Mode="Fixed" />
-    <Dependency Name="RavenDB.Database" Version="2.5.2666.0" Mode="Fixed" />
-    <Dependency Name="RavenDB.Embedded" Version="2.5.2666.0" Mode="Fixed" />
+    <Dependency Name="RavenDB.Client" Version="2.5.2750" Mode="Fixed" />
+    <Dependency Name="RavenDB.Database" Version="2.5.2750" Mode="Fixed" />
+    <Dependency Name="RavenDB.Embedded" Version="2.5.2750" Mode="Fixed" />
     <Dependency Name="RhinoMocks" Version="3.6.1" Mode="Fixed" />
     <Dependency Name="Selenium.RC" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.Support" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.35.0.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.9.8.203" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.9.9.219" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
-    <Dependency Name="Storyteller2" Version="2.0.0.40" Mode="Float" />
+    <Dependency Name="Storyteller2" Version="2.0.0.46" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="System.Spatial" Version="5.6.0.0" Mode="Fixed" />
