--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -185,6 +185,8 @@
     <Compile Include="Configuration\UriExtensionsTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Diagnostics\MessageRecordListenerTester.cs" />
+    <Compile Include="Diagnostics\MessageRecordTester.cs" />
     <Compile Include="Diagnostics\Web_endpoints_integration_Smoke_Tester.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -648,6 +650,7 @@
     <Compile Include="ServiceBus_DelaySend_Tester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ServiceBus_Send_to_destination_Tester.cs" />
     <Compile Include="StubChannelNode.cs">
       <SubType>Code</SubType>
     </Compile>
