--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -268,6 +268,8 @@
     <Compile Include="ErrorHandling\RequeueContinuationTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ErrorHandling\RespondWithMessageContinuationTester.cs" />
+    <Compile Include="ErrorHandling\RespondWithMessageHandlerTester.cs" />
     <Compile Include="ErrorHandling\RetryNow_integration_testing.cs">
       <SubType>Code</SubType>
     </Compile>
