--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Runtime\Cascading\ISendMyself.cs" />
     <Compile Include="Runtime\Cascading\OutgoingSender.cs" />
     <Compile Include="Runtime\Cascading\RespondToSender.cs" />
+    <Compile Include="Runtime\Cascading\Respond.cs" />
     <Compile Include="Runtime\Cascading\SendDirectlyTo.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeAddedBackToQueue.cs" />
     <Compile Include="Runtime\Delayed\DelayedEnvelopeProcessor.cs" />
