fixed the ChainInvoker mechanics so that it is using the continuation to avoid sending outgoing messages when the chain fails

--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -440,6 +440,7 @@
     <Compile Include="Runtime\Invocation\ChainFailureContinuationTester.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Runtime\Invocation\ChainInvokerIntegrationTester.cs" />
     <Compile Include="Runtime\Invocation\ChainInvokerTester.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -447,6 +448,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Runtime\Invocation\CompositeContinuationTester.cs" />
+    <Compile Include="Runtime\Invocation\Messages.cs" />
     <Compile Include="Runtime\Invocation\sending_a_message_with_no_consumer.cs" />
     <Compile Include="Runtime\Invocation\DelayedEnvelopeHandlerTester.cs">
       <SubType>Code</SubType>
