--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Registration\Nodes\HandlerCall.cs" />
     <Compile Include="Runtime\Acknowledgement.cs" />
     <Compile Include="Runtime\Cascading\DelayedResponse.cs" />
+    <Compile Include="Runtime\Cascading\IImmediateContinuation.cs" />
     <Compile Include="Runtime\Cascading\IOutgoingSender.cs" />
     <Compile Include="Runtime\Cascading\ISendMyself.cs" />
     <Compile Include="Runtime\Cascading\OutgoingSender.cs" />
