--- a/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
+++ b/src/FubuTransportation.Testing/FubuTransportation.Testing.csproj
@@ -662,6 +662,7 @@
     <Compile Include="StubChannelNode.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Subscriptions\SubscriptionCache_clearing_tester.cs" />
     <Compile Include="Subscriptions\Subscription_equality_tester.cs">
       <SubType>Code</SubType>
     </Compile>
