Added IFubuTransportActivator that runs after the channels have been opened.

--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -133,6 +133,7 @@
     <Compile Include="FubuTransportationExtensions.cs" />
     <Compile Include="FubuTransportServiceRegistry.cs" />
     <Compile Include="HandlerExtensions.cs" />
+    <Compile Include="IFubuTransportActivator.cs" />
     <Compile Include="ImportHandlers.cs" />
     <Compile Include="InMemory\AllQueuesInMemoryPolicy.cs" />
     <Compile Include="InMemory\InMemoryChannel.cs" />
