Updated for changes in LightningQueues

--- a/ripple.config
+++ b/ripple.config
@@ -44,6 +44,7 @@
     <Dependency Name="Microsoft.Data.Services.Client" Version="5.6.0" Mode="Fixed" />
     <Dependency Name="Microsoft.WindowsAzure.ConfigurationManager" Version="2.0.3" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="5.0.8.0" Mode="Fixed" />
+    <Dependency Name="NLog" Version="2.1.0.0" Mode="Float" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
