Added sample ST project to demonstrate external nodes

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ src/FubuTransportation.Storyteller/FubuTransportation.Storyteller-results/
 fubutransportation.esent
 fubutransportation.esent.*
 src/FubuTransportation.Docs/snippets
+*.stresult
