Added a couple sample tests for external nodes

--- a/src/FubuTransportation.Serenity.Samples/ripple.dependencies.config
+++ b/src/FubuTransportation.Serenity.Samples/ripple.dependencies.config
@@ -4,6 +4,7 @@ FubuLocalization
 FubuMVC.Core
 FubuMVC.Katana
 FubuMVC.OwinHost
+FubuMVC.StructureMap
 HtmlTags
 Owin
 Selenium.RC
@@ -12,3 +13,4 @@ Selenium.WebDriver
 Selenium.WebDriverBackedSelenium
 Serenity
 StoryTeller2
+StructureMap
