--- a/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
+++ b/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
@@ -48,6 +48,9 @@
     <Reference Include="FubuMVC.OwinHost">
       <HintPath>..\packages\FubuMVC.OwinHost\lib\net40\FubuMVC.OwinHost.dll</HintPath>
     </Reference>
+    <Reference Include="FubuMVC.StructureMap">
+      <HintPath>..\packages\FubuMVC.StructureMap\lib\net40\FubuMVC.StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlTags">
       <HintPath>..\packages\HtmlTags\lib\4.0\HtmlTags.dll</HintPath>
     </Reference>
@@ -73,6 +76,9 @@
     <Reference Include="StoryTeller">
       <HintPath>..\packages\Storyteller2\lib\net40\StoryTeller.dll</HintPath>
     </Reference>
+    <Reference Include="StructureMap">
+      <HintPath>..\packages\structuremap\lib\StructureMap.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="ThoughtWorks.Selenium.Core">
@@ -89,9 +95,21 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
-    <Compile Include="Fixtures\ExternalNodes\MultipleEndpointsFixture.cs" />
-    <Compile Include="FubuTransportationStorytellerSystem.cs" />
+    <Compile Include="Fixtures\MultipleEndpointsFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SampleSystem.cs" />
+    <Compile Include="Setup\Registries.cs" />
+    <Compile Include="Setup\MessageForClient.cs" />
+    <Compile Include="Setup\MultipleEndpointsSettings.cs" />
+    <Compile Include="SystemUnderTest\MessageRecorder.cs" />
+    <Compile Include="SystemUnderTest\Subscriptions\CommandHandler.cs" />
+    <Compile Include="SystemUnderTest\Subscriptions\PublishedEvent.cs" />
+    <Compile Include="SystemUnderTest\Subscriptions\SomeCommand.cs" />
+    <Compile Include="SystemUnderTest\TestApplication.cs" />
+    <Compile Include="SystemUnderTest\TestMessage.cs" />
+    <Compile Include="SystemUnderTest\TestMessageHandler.cs" />
+    <Compile Include="SystemUnderTest\TestRegistry.cs" />
+    <Compile Include="SystemUnderTest\TestResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\FubuTransportation.Serenity\FubuTransportation.Serenity.csproj">
@@ -101,14 +119,6 @@
     <ProjectReference Include="..\FubuTransportation\FubuTransportation.csproj">
       <Project>{23fdb1ce-1ec5-4d1b-b3e5-008a439caa13}</Project>
       <Name>FubuTransportation</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ServiceNode\ServiceNode.csproj">
-      <Project>{C71136AE-8197-4A9A-AA5F-9102F657C502}</Project>
-      <Name>ServiceNode</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WebsiteNode\WebsiteNode.csproj">
-      <Project>{988142C2-5518-404D-A6EF-36C551086912}</Project>
-      <Name>WebsiteNode</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
