--- a/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
+++ b/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
@@ -99,7 +99,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleSystem.cs" />
     <Compile Include="Setup\Registries.cs" />
-    <Compile Include="Setup\MessageForClient.cs" />
+    <Compile Include="Setup\MessageForExternalService.cs" />
     <Compile Include="Setup\MultipleEndpointsSettings.cs" />
     <Compile Include="SystemUnderTest\MessageRecorder.cs" />
     <Compile Include="SystemUnderTest\Subscriptions\CommandHandler.cs" />
