fully converted to FubuMVC 2.0

--- a/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
@@ -14,6 +14,7 @@ Microsoft.Data.Services.Client
 Microsoft.WindowsAzure.ConfigurationManager
 Newtonsoft.Json
 NUnit
+Owin
 RavenDB.Client
 RavenDB.Database
 RavenDB.Embedded
