--- a/ripple.config
+++ b/ripple.config
@@ -8,35 +8,26 @@
   <DefaultFloatConstraint>Current</DefaultFloatConstraint>
   <DefaultFixedConstraint>Current,NextMajor</DefaultFixedConstraint>
   <Feeds>
+    <Feed Url="https://www.myget.org/F/fubumvc-edge" Mode="Fixed" Stability="ReleasedOnly" />
     <Feed Url="http://build.fubu-project.org/guestAuth/app/nuget/v1/FeedService.svc" Mode="Float" Stability="ReleasedOnly" />
     <Feed Url="http://nuget.org/api/v2" Mode="Fixed" Stability="ReleasedOnly" />
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.0.0.576" Mode="Float" />
+    <Dependency Name="Bottles" Version="2.1.1.586" Mode="Float" />
     <Dependency Name="BottleServiceRunner" Version="2.0.0.558" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.2.0.272" Mode="Float" />
+    <Dependency Name="FubuCore" Version="1.4.0.282" Mode="Float" />
     <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="1.2.0.1686" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.Assets" Version="0.9.9.557" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.UI" Version="1.0.1.606" Mode="Float" />
-    <Dependency Name="FubuMVC.Core.View" Version="1.0.0.576" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="0.9.8.355" Mode="Float" />
-    <Dependency Name="FubuMVC.Instrumentation" Version="0.1.0.233" Mode="Float" />
-    <Dependency Name="FubuMVC.JQueryUI" Version="0.5.0.339" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="1.2.0.1686" Mode="Float" />
-    <Dependency Name="FubuMVC.Media" Version="0.9.5.430" Mode="Float" />
-    <Dependency Name="FubuMVC.Navigation" Version="0.9.1.205" Mode="Float" />
-    <Dependency Name="FubuMVC.OwinHost" Version="1.2.0.1686" Mode="Float" />
-    <Dependency Name="FubuMVC.RavenDb45" Version="0.9.5.95" Mode="Float" />
-    <Dependency Name="FubuMVC.SlickGrid" Version="0.5.0.647" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="1.0.0.576" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="1.2.0.1672" Mode="Float" />
-    <Dependency Name="FubuMVC.TwitterBootstrap" Version="0.0.0.642" Mode="Float" />
-    <Dependency Name="FubuPersistence45" Version="0.9.5.95" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="2.0.0.1776" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="2.0.0.1776" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="2.0.0.1776" Mode="Float" />
+    <Dependency Name="FubuMVC.RavenDb45" Version="0.9.5.102" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="2.0.0.1776" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1776" Mode="Float" />
+    <Dependency Name="FubuPersistence45" Version="0.9.5.102" Mode="Float" />
     <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
-    <Dependency Name="HtmlTags" Version="2.0.0.181" Mode="Float" />
-    <Dependency Name="LightningQueues" Version="0.1.0.47" Mode="Float" />
+    <Dependency Name="HtmlTags" Version="2.1.0.183" Mode="Float" />
+    <Dependency Name="LightningQueues" Version="0.1.0.78" Mode="Float" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
     <Dependency Name="Microsoft.CompilerServices.AsyncTargetingPack" Version="1.0.1.0" Mode="Fixed" />
     <Dependency Name="Microsoft.Data.Edm" Version="5.6.0.0" Mode="Fixed" />
@@ -56,9 +47,9 @@
     <Dependency Name="Selenium.Support" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.35.0.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.9.9.220" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.10.0.293" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
-    <Dependency Name="Storyteller2" Version="2.0.0.48" Mode="Float" />
+    <Dependency Name="Storyteller2" Version="2.0.0.60" Mode="Float" />
     <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
     <Dependency Name="System.Spatial" Version="5.6.0.0" Mode="Fixed" />
