--- a/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
+++ b/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
@@ -58,6 +58,12 @@
       <HintPath>..\packages\LightningQueues\lib\LightningQueues.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog\lib\net45\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
