--- a/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
+++ b/src/FubuTransportation.RavenDb.Testing/FubuTransportation.RavenDb.Testing.csproj
@@ -124,6 +124,9 @@
     <Reference Include="nunit.mocks">
       <HintPath>..\packages\NUnit\lib\nunit.mocks.dll</HintPath>
     </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit\lib\pnunit.framework.dll</HintPath>
     </Reference>
