--- a/src/FubuTransportation.RavenDb/ripple.dependencies.config
+++ b/src/FubuTransportation.RavenDb/ripple.dependencies.config
@@ -11,6 +11,7 @@ Microsoft.Data.OData
 Microsoft.Data.Services.Client
 Microsoft.WindowsAzure.ConfigurationManager
 Newtonsoft.Json
+Owin
 RavenDB.Client
 RavenDB.Database
 RavenDB.Embedded
