--- a/src/ServiceNode/ServiceNode.csproj
+++ b/src/ServiceNode/ServiceNode.csproj
@@ -52,6 +52,9 @@
     <Reference Include="NLog">
       <HintPath>..\packages\NLog\lib\net45\NLog.dll</HintPath>
     </Reference>
+    <Reference Include="Owin">
+      <HintPath>..\packages\Owin\lib\net40\Owin.dll</HintPath>
+    </Reference>
     <Reference Include="StructureMap">
       <HintPath>..\packages\structuremap\lib\StructureMap.dll</HintPath>
     </Reference>
