converted to StructureMap 3 and upgraded NUnit

--- a/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
+++ b/src/FubuTransportation.RavenDb.Testing/ripple.dependencies.config
@@ -14,6 +14,7 @@ Microsoft.Data.Services.Client
 Microsoft.WindowsAzure.ConfigurationManager
 Newtonsoft.Json
 NUnit
+NUnit.Runners
 Owin
 RavenDB.Client
 RavenDB.Database
