--- a/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
+++ b/src/FubuTransportation.Serenity.Samples/FubuTransportation.Serenity.Samples.csproj
@@ -74,7 +74,10 @@
       <HintPath>..\packages\Storyteller2\lib\net40\StoryTeller.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
-      <HintPath>..\packages\structuremap\lib\StructureMap.dll</HintPath>
+      <HintPath>..\packages\structuremap\lib\net40\StructureMap.dll</HintPath>
+    </Reference>
+    <Reference Include="StructureMap.Net4">
+      <HintPath>..\packages\structuremap\lib\net40\StructureMap.Net4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
