--- a/ripple.config
+++ b/ripple.config
@@ -14,18 +14,18 @@
     <Feed Url="http://packages.nuget.org/v1/FeedService.svc" Mode="Fixed" Stability="ReleasedOnly" />
   </Feeds>
   <Nugets>
-    <Dependency Name="Bottles" Version="2.1.1.586" Mode="Float" />
-    <Dependency Name="BottleServiceRunner" Version="2.0.0.558" Mode="Float" />
-    <Dependency Name="FubuCore" Version="1.4.0.282" Mode="Float" />
-    <Dependency Name="FubuLocalization" Version="1.0.0.174" Mode="Float" />
-    <Dependency Name="FubuMVC.Core" Version="2.0.0.1776" Mode="Float" />
-    <Dependency Name="FubuMVC.Diagnostics" Version="2.0.0.1776" Mode="Float" />
-    <Dependency Name="FubuMVC.Katana" Version="2.0.0.1776" Mode="Float" />
-    <Dependency Name="FubuMVC.RavenDb45" Version="0.9.5.102" Mode="Float" />
-    <Dependency Name="FubuMVC.Spark" Version="2.0.0.1776" Mode="Float" />
-    <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1776" Mode="Float" />
-    <Dependency Name="FubuPersistence45" Version="0.9.5.102" Mode="Float" />
-    <Dependency Name="FubuTestingSupport" Version="1.2.0.259" Mode="Float" />
+    <Dependency Name="Bottles" Version="3.0.0.590" Mode="Float" />
+    <Dependency Name="BottleServiceRunner" Version="3.0.0.590" Mode="Float" />
+    <Dependency Name="FubuCore" Version="2.0.0.287" Mode="Float" />
+    <Dependency Name="FubuLocalization" Version="1.1.0.181" Mode="Float" />
+    <Dependency Name="FubuMVC.Core" Version="2.0.0.1783" Mode="Float" />
+    <Dependency Name="FubuMVC.Diagnostics" Version="2.0.0.1783" Mode="Float" />
+    <Dependency Name="FubuMVC.Katana" Version="2.0.0.1783" Mode="Float" />
+    <Dependency Name="FubuMVC.RavenDb45" Version="2.0.0.104" Mode="Float" />
+    <Dependency Name="FubuMVC.Spark" Version="2.0.0.1783" Mode="Float" />
+    <Dependency Name="FubuMVC.StructureMap" Version="2.0.0.1783" Mode="Float" />
+    <Dependency Name="FubuPersistence45" Version="2.0.0.104" Mode="Float" />
+    <Dependency Name="FubuTestingSupport" Version="2.0.0.287" Mode="Float" />
     <Dependency Name="HtmlTags" Version="2.1.0.183" Mode="Float" />
     <Dependency Name="LightningQueues" Version="0.1.0.78" Mode="Float" />
     <Dependency Name="ManagedEsent" Version="1.8.3.2" Mode="Fixed" />
@@ -37,6 +37,8 @@
     <Dependency Name="Newtonsoft.Json" Version="5.0.8.0" Mode="Fixed" />
     <Dependency Name="NLog" Version="2.1.0.0" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
+    <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
+    <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Float" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
     <Dependency Name="PowerThreading" Version="20120420.0" Mode="Fixed" />
     <Dependency Name="RavenDB.Client" Version="2.5.2750" Mode="Fixed" />
@@ -47,11 +49,11 @@
     <Dependency Name="Selenium.Support" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriver" Version="2.35.0.0" Mode="Fixed" />
     <Dependency Name="Selenium.WebDriverBackedSelenium" Version="2.35.0.0" Mode="Fixed" />
-    <Dependency Name="Serenity" Version="0.10.0.293" Mode="Float" />
+    <Dependency Name="Serenity" Version="0.10.0.295" Mode="Float" />
     <Dependency Name="Spark" Version="1.7.5.1" Mode="Fixed" />
     <Dependency Name="Storyteller2" Version="2.0.0.60" Mode="Float" />
-    <Dependency Name="structuremap" Version="2.6.3" Mode="Fixed" />
-    <Dependency Name="structuremap.automocking" Version="2.6.3" Mode="Fixed" />
+    <Dependency Name="structuremap" Version="3.0.3.116" Mode="Fixed" />
+    <Dependency Name="structuremap.automocking" Version="3.0.3.116" Mode="Fixed" />
     <Dependency Name="System.Spatial" Version="5.6.0.0" Mode="Fixed" />
     <Dependency Name="TopShelf" Version="3.1.2.0" Mode="Fixed" />
     <Dependency Name="WindowsAzure.Storage" Version="3.0.1.0" Mode="Fixed" />
