--- a/ripple.config
+++ b/ripple.config
@@ -36,6 +36,7 @@
     <Dependency Name="Microsoft.WindowsAzure.ConfigurationManager" Version="2.0.3" Mode="Fixed" />
     <Dependency Name="Newtonsoft.Json" Version="5.0.8.0" Mode="Fixed" />
     <Dependency Name="NLog" Version="2.1.0.0" Mode="Fixed" />
+    <Dependency Name="NUnit" Version="2.5.10.11092" Mode="Fixed" />
     <Dependency Name="NUnit" Version="2.6.3.0" Mode="Fixed" />
     <Dependency Name="NUnit.Runners" Version="2.6.3.0" Mode="Float" />
     <Dependency Name="Owin" Version="1.0.0.0" Mode="Fixed" />
