--- a/packaging/nuget/fubutransportation.lightningqueues.nuspec
+++ b/packaging/nuget/fubutransportation.lightningqueues.nuspec
@@ -18,5 +18,6 @@
   </metadata>
   <files xmlns="">
     <file src="..\..\src\FubuTransportation.LightningQueues\bin\release\FubuTransportation.LightningQueues.dll" target="lib\4.5" />
+    <file src="..\..\src\FubuTransportation.LightningQueues\bin\release\FubuTransportation.LightningQueues.pdb" target="lib\4.5" />
   </files>
 </package>
