--- a/packaging/nuget/fubutransportation.nuspec
+++ b/packaging/nuget/fubutransportation.nuspec
@@ -18,5 +18,6 @@
   </metadata>
   <files xmlns="">
     <file src="..\..\src\FubuTransportation\bin\release\FubuTransportation.dll" target="lib\4.5" />
+    <file src="..\..\src\FubuTransportation\bin\release\FubuTransportation.pdb" target="lib\4.5" />
   </files>
 </package>
