--- a/packaging/nuget/fubutransportation.serenity.nuspec
+++ b/packaging/nuget/fubutransportation.serenity.nuspec
@@ -18,5 +18,6 @@
   </metadata>
   <files xmlns="">
     <file src="..\..\src\FubuTransportation.Serenity\bin\release\FubuTransportation.Serenity.dll" target="lib\4.5" />
+    <file src="..\..\src\FubuTransportation.Serenity\bin\release\FubuTransportation.Serenity.pdb" target="lib\4.5" />
   </files>
 </package>
