--- a/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
+++ b/src/FubuTransportation.LightningQueues/FubuTransportation.LightningQueues.csproj
@@ -74,8 +74,12 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="Diagnostics\MessageFubuDiagnostics.cs" />
     <Compile Include="Diagnostics\LightningQueuesFubuDiagnostics.cs" />
     <Compile Include="Diagnostics\MessagesFubuDiagnostics.cs" />
+    <Compile Include="Diagnostics\MessagesTableTag.cs" />
+    <Compile Include="Diagnostics\QueueMessageNotFoundConvention.cs" />
+    <Compile Include="Diagnostics\QueueMessageRetrieval.cs" />
     <Compile Include="IPersistentQueues.cs" />
     <Compile Include="LightningQueuesChannel.cs" />
     <Compile Include="LightningQueueSettings.cs" />
@@ -95,9 +99,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Diagnostics\_StandardMessageDetails.spark" />
+    <None Include="Diagnostics\QueueMessageVisualization.spark" />
     <None Include="Diagnostics\QueueManagersVisualization.spark" />
     <None Include="Diagnostics\QueueMessagesVisualization.spark" />
     <EmbeddedResource Include="pak-WebContent.zip" />
+    <None Include="Diagnostics\ErrorQueueMessageVisualization.spark" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
