--- a/src/FubuTransportation/FubuTransportation.csproj
+++ b/src/FubuTransportation/FubuTransportation.csproj
@@ -268,6 +268,10 @@
     <Compile Include="Sagas\SagaTypes.cs" />
     <Compile Include="Sagas\StatefulSagaConvention.cs" />
     <Compile Include="Sagas\StatefulSagaNode.cs" />
+    <Compile Include="ScheduledJob\IScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobLogger.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobLogRecords.cs" />
+    <Compile Include="ScheduledJob\ScheduledJobRunner.cs" />
     <Compile Include="Scheduling\IScheduler.cs" />
     <Compile Include="Scheduling\TaskScheduler.cs" />
     <Compile Include="Scheduling\ThreadScheduler.cs" />
